--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   },
   "homepage": "https://github.com/rodrigues-t/coupon-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "nanoid": "^3.1.20"
+    "nanoid": "^3.1.20",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
