--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coupon-api",
   "version": "1.0.0",
-  "description": "Coupon manager API",
+  "description": "Coupon generator API",
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
