--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nanoid": "^3.1.20",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
