--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coupon-api",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Coupon generator API",
   "main": "server.js",
   "scripts": {
@@ -32,6 +32,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "swagger-jsdoc": "^6.0.6",
+    "swagger-ui-express": "^4.1.6",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
